--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+}
